fix some vertical and horizontal aligns of elems

--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -709,7 +709,7 @@ $container-padding-s: 60px;
     }
 
     p.asterisk {
-      padding-left: 35px;
+      padding-left: 30px;
       font-size: 13px;
     }
   }
@@ -1070,5 +1070,28 @@ $container-padding-s: 60px;
         max-width: 86px;
       }
     }
+  }
+
+    .main__inner {
+    left: 0;
+    top: 20vh;
+    margin-left: 0;
+    margin-top: 0;
+    padding: 15px;
+    transform: translate(0, 0);
+    height: 80vh;
+    width: 100vw;
+
+  }
+
+  #join-button-first {
+    position: absolute;
+    left: 50%;
+    bottom: 26px;
+    transform: translate(-50%, 0);
+  }
+
+  #video-about-container {
+    padding-top: 26px;
   }
 }
