--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9978,11 +9978,11 @@ input[type='email'] {
   }
 
   ul {
-    padding-left: 50px;
+    padding-left: 30px;
   }
 
   p.asterisk {
-    padding-left: 35px;
+    padding-left: 30px;
     font-size: 13px;
     line-height: 16px;
   }
